# ugr-kicad-plugin

./: README.md  index.html  packages.json  pyproject.toml  repository.json
.github/workflows/: main.yml
plugin/: __init__.py  stencil_dialog.py  ugr_dialog.py  ugr_plugin_action.py
