[build-system]
requires = [
  "hatchling>=1.18",
  "hatch-kicad",
]
build-backend = "hatchling.build"

[project]
name = "UGRacing-KiCad-Plugin"
keywords = ["kicad", "ugracing"]
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Manufacturing",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
]
dynamic = ["version"]
dependencies = [
  "kikit"
]

[project.urls]
"Homepage" = "https://github.com/YukiSuter/ugr-kicad-plugin"
"Bug Tracker" = "https://github.com/YukiSuter/ugr-kicad-plugin/issues"

[project.scripts]
plugin-cli = "plugin.__main__:app"

[tool.hatch.version]
path = "plugin/version.py"

[tool.hatch.build.targets.kicad-package]
name = "UGRacing Utilities"
description = "UGRacing Plugin for KiCad"
description_full = [
  "This is a plugin intended for use by UGRacing.",
]
# plugin identifier, remember to change!
identifier = "com.ugracing.yukis.ugracing-plugin"
author = { name = "Yuki Suter", web="https://yukisuter.com" }
status = "development"
kicad_version = "8.0"
sources = ["plugin"]
include = [
  "plugin/*.py",
  "plugin/icon.png",
  "plugin/icon_full.png",
]
icon = "resources/icon.png"
# hosted on GitHub pages, remember to change username and project name!
download_url = "https://github.com/YukiSuter/ugr-kicad-plugin"

[tool.hatch.build.targets.kicad-package.hooks.kicad-repository]
# use defauls

[tool.hatch.envs.default]
system-packages = true # for `pcbnew` module
dependencies = [
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py38"]
line-length = 88

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.per-file-ignores]
"plugin/template_plugin_action.py" = [
  "N802", # Ignore function names not in lowercase
]
"plugin/__main__.py" = [
  "T201", # Let us do simple prints in main
]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%H:%M:%S"
